--- a/cctv.html
+++ b/cctv.html
@@ -2,18 +2,29 @@
 <html lang="ko">
 <head>
 <meta charset="UTF-8">
-<title>Retro CRT Login</title>
+<title>CRT Terminal Login</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
 :root{--green:#32ff8a;--bg:#031c11;}
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Courier New",monospace;}
-body{height:100vh;background:#000;display:flex;justify-content:center;align-items:center;overflow:hidden}
+*{margin:0;padding:0;box-sizing:border-box;
+  font-family:'Press Start 2P',Courier,monospace;
+/* 드래그 차단 */
+  user-select:none;-webkit-user-select:none;-ms-user-select:none;}
+body{
+  height:100vh;display:flex;justify-content:center;align-items:center;overflow:hidden;
+  background:#000;
+/* 고정 CRT 무늬(배경 전체) */
+  background-image:
+    repeating-linear-gradient(
+      rgba(0,0,0,.6) 0 4px,
+      rgba(0,0,0,.8) 4px 8px);
+}
 
-/* ── Pony Island식 둥근 베젤 ── */
+/* ── 둥근 베젤 ── */
 #cabinet{
-  width:90vw;max-width:1000px;height:70vh;max-height:700px;
-  background:#111;border-radius:80px;
-  box-shadow:0 0 40px #000 inset,0 0 60px #000;
+  width:90vw;max-width:1000px;height:70vh;max-height:700px;background:#111;
+  border-radius:80px;box-shadow:0 0 40px #000 inset,0 0 60px #000;
   display:flex;justify-content:center;align-items:center;
 }
 
@@ -23,11 +34,12 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
   border-radius:50px;box-shadow:inset 0 0 140px #010;overflow:hidden;
 }
 
-/* ── CRT 화면(기울기 제거) ── */
+/* ── 화면 ── */
 #screen{
   position:absolute;inset:0;display:flex;flex-direction:column;justify-content:center;align-items:center;
   color:var(--green);text-shadow:0 0 4px var(--green);
 }
+
 /* 스캔라인 + 비네팅 */
 #screen::before{content:"";position:absolute;inset:0;
   background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
@@ -35,27 +47,31 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
 #screen::after{content:"";position:absolute;inset:0;
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
   pointer-events:none;}
+
 /* 노이즈 */
-#noise{position:absolute;inset:-35%;
+#noise{
+  position:absolute;inset:-35%;
   background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCI+PGZpbHRlciBpZD0iej48ZmVGcnVjdGFsTm9pc2UgdHlwZT0idHVyYnVsZW5jZSIgYmFzZUZyZXF1ZW5jeT0iLjkiLz48L2ZpbHRlcj48cmVjdCB3aWR0aD0iMTUwIiBoZWlnaHQ9IjE1MCIgZmlsdGVyPSJ1cmwoI3opIiBmaWxsPSIjRkZGIi8+PC9zdmc+");
-  opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
+  opacity:.05;animation:noise 1s steps(5) infinite;pointer-events:none;}
 @keyframes noise{to{transform:translate(50%,50%);}}
 
-/* 텍스트 & 입력창 */
-h2{font-size:3vmin;margin-bottom:4vmin;letter-spacing:2px;}
+/* 입력/메시지 */
+h2{font-size:2.1vmin;margin-bottom:3vmin;}
 #typed{width:360px;max-width:60%;padding:6px 0;border-bottom:2px solid var(--green);
-  font-size:2.5vmin;min-height:42px;text-align:center;letter-spacing:2px;}
-#msg{margin-top:32px;font-size:2.4vmin;min-height:30px;}
-#screen:focus{outline:none;}
-@keyframes glitch{0%{transform:none;}50%{transform:translate(1px,-1px);}100%{transform:none}}
+  font-size:2vmin;min-height:38px;text-align:center;letter-spacing:2px;}
+#msg{margin-top:30px;font-size:2vmin;min-height:28px;color:#f44;}
+@keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
+
+/* 노커서 깜빡임 제거 – caret 숨김 */
+input{caret-color:transparent;}
 </style>
 </head>
 <body>
 
 <div id="cabinet">
   <div id="monitor">
-    <div id="screen" tabindex="0">
-      <h2>Enter the Password</h2>
+    <div id="screen">
+      <h2>ENTER THE PASSWORD</h2>
       <div id="typed"></div>
       <input id="hidden" autocomplete="off" style="position:absolute;left:-9999px">
       <div id="msg"></div>
@@ -69,26 +85,25 @@ const PASS="WATCHME";let buf="",amb=false;
 let ctx;const AC=()=>ctx||(ctx=new(window.AudioContext||window.webkitAudioContext));
 function tone(f,t){const a=AC(),o=a.createOscillator(),g=a.createGain();
   o.type=t;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(a.destination);
-  o.start();g.gain.exponentialRampToValueAtTime(.0001,a.currentTime+.35);o.stop(a.currentTime+.36);}
-function ambStart(){if(amb)return;amb=true;const a=AC(),h=a.createOscillator(),g=a.createGain();
-  h.type="sine";h.frequency.value=50;g.gain.value=.02;h.connect(g).connect(a.destination);h.start();
-  const s=a.sampleRate*2,b=a.createBuffer(1,s,a.sampleRate),d=b.getChannelData(0);
-  for(let i=0;i<s;i++)d[i]=Math.random()*2-1;
-  const n=a.createBufferSource(),ng=a.createGain();n.buffer=b;n.loop=true;ng.gain.value=.015;
-  n.connect(ng).connect(a.destination);n.start();}
+  o.start();g.gain.exponentialRampToValueAtTime(0.0001,a.currentTime+.35);o.stop(a.currentTime+.36);}
+function amb(){if(amb)return;amb=true;
+  const a=AC(),h=a.createOscillator(),g=a.createGain();
+  h.type="sine";h.frequency.value=50;g.gain.value=.02;h.connect(g).connect(a.destination);h.start();}
 const typed=document.getElementById("typed"),msg=document.getElementById("msg");
 document.addEventListener("keydown",e=>{
-  ambStart();const k=e.key.toUpperCase();
+  amb();const k=e.key.toUpperCase();
   if(k==="BACKSPACE"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
-  if(k==="ENTER"){e.preventDefault();check();return;}
+  if(k==="ENTER"){e.preventDefault();chk();return;}
   if(k.length===1&&buf.length<PASS.length){buf+=k;typed.textContent=buf;}
 });
-function check(){
+function chk(){
   if(buf===PASS){
-    msg.style.color="var(--green)";msg.textContent="ACCESS GRANTED";tone(440,"triangle");
+    msg.style.color="var(--green)";msg.textContent="ACCESS GRANTED";tone(440,"triangle");
     setTimeout(()=>location.href="cctv.html",1400);
   }else{
-    msg.style.color="#f44";msg.textContent="ACCESS DENIED";tone(120,"sawtooth");
+    msg.style.color="#f44";msg.textContent="ACCESS DENIED";tone(120,"sawtooth");
+    document.getElementById("screen").style.animation="glitch .35s 2";
+    setTimeout(()=>{document.getElementById("screen").style.animation="none";},700);
     buf="";typed.textContent="";
   }
 }
