--- a/login.html
+++ b/login.html
@@ -28,9 +28,12 @@ body{height:100vh;background:#000;display:flex;justify-content:center;align-item
   background:radial-gradient(ellipse at center,transparent 0%,transparent 63%,rgba(0,0,0,.48) 100%);
   pointer-events:none;}
 /* 노이즈 */
-#noise{position:absolute;inset:-35%;
-  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0i..."); /* 축약 */
-  opacity:.06;animation:noise 1s steps(5) infinite;pointer-events:none;}
+/* 고정 CRT 무늬(배경 전체) */
+  background-image:
+    repeating-linear-gradient(
+      rgba(0,0,0,.6) 0 4px,
+      rgba(0,0,0,.8) 4px 8px);
+}
 @keyframes noise{to{transform:translate(50%,50%);}}
 /* 출력 */
 #history{flex:1;width:100%;overflow-y:auto;padding:4vmin 4vmin 0 7vmin;scrollbar-width:none;}
