--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -25,14 +25,16 @@ body{
 #cabinet{
   width:90vw;max-width:1000px;height:70vh;max-height:700px;
   background:radial-gradient(circle at center,
-              #2b2b2b 0%, 
-              #191919 40%,
-              #0d0d0d 75%, 
-              #000 100%);
+              #000 0%,      /* 가장자리 완전 검정 */
+              #111 35%,
+              #1b1b1b 65%,
+              #2d2d2d 85%,  /* 안쪽이 가장 밝음 */
+              #333 100%);
   border-radius:80px;
-  box-shadow:0 0 40px #000 inset,0 0 60px #000;   /* 기존 그림자 유지 */
+  box-shadow:0 0 40px #000 inset,0 0 60px #000;
   display:flex;justify-content:center;align-items:center;
 }
+
 
 /* ── 유리판 ── */
 #monitor{
