--- a/system-01-Acess.html
+++ b/system-01-Acess.html
@@ -6,140 +6,134 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 <style>
-:root{--green:#35ff8a;--bg:#031c11;}
+/* ── 공통 ──────────────────────────────────────────── */
+:root{
+  --green:#2cf891;          /* 글씨 형광 그린 */
+  --shell:#0a1b12;          /* 하우징 기본색 */
+  --shell-hi:#1d3827;       /* 하우징 빛 받는 면 */
+  --shell-lo:#030906;       /* 하우징 그림자 */
+  --bezel:#06110b;          /* 안쪽 베젤 */
+  --glow:#002a14;           /* 화면 녹색 글로우 */
+}
 *{margin:0;padding:0;box-sizing:border-box;
-   font-family:'Press Start 2P',monospace;
-   user-select:none;-webkit-user-select:none;-ms-user-select:none;}
-html,body{height:100%;background:#000;
-  background-image:radial-gradient(circle at center,#001a0e 0%,#000 80%);display:flex;justify-content:center;align-items:center;}
+  font-family:'Press Start 2P',monospace;
+  user-select:none;-webkit-user-select:none;-ms-user-select:none}
+html,body{height:100%;background:#000;display:flex;justify-content:center;align-items:center;}
 
-/* ── 외부 쉘(모니터 하우징) ───────────────────────────── */
+/* ── 1. 외곽 하우징(shell) ─────────────────────────── */
 .shell{
   position:relative;
-  width:900px;height:560px;
-  border-radius:32px;
-  padding:34px 36px 120px;           /* 좌우/상단 베젤, 하단 하우징 여백 */
-  background:#01180d;                /* 기본 어두운 올리브 */
-  background-image:
-     radial-gradient(circle at 25% 15%,rgba(70,120,80,.12) 0%,transparent 60%),
-     radial-gradient(circle at 75% 85%,rgba(0,50,30,.25) 0%,transparent 70%),
-     linear-gradient(180deg,rgba(255,255,255,.05) 0%,rgba(0,0,0,.4) 90%);
+  width:920px;height:620px;          /* 실제 비율에 맞춤 */
+  border-radius:38px;
+  padding:34px 36px 130px;           /* 상·좌우·하 베젤 두께 */
+  background:linear-gradient(180deg,var(--shell-hi) 0%,var(--shell) 50%,var(--shell-lo) 100%);
   box-shadow:
-     0 0 40px #000 inset,           /* 안쪽 깊이 */
-     0 12px 35px rgba(0,0,0,.9);    /* 주변 그림자 */
+    inset 0 0 60px #000,             /* 깊은 내부 음영 */
+    0 18px 45px rgba(0,0,0,.9);      /* 환경 드롭 섀도 */
+  filter:saturate(115%);
 }
 
-/* ── 베젤(유리 바로 앞 프레임) ────────────────────────── */
+/* ── 2. 통풍구  & POWER 버튼 ‐ 장식 ───────────────── */
+.vent{
+  position:absolute;bottom:62px;left:50%;transform:translateX(-50%);
+  width:360px;height:34px;border-radius:4px;
+  background:repeating-linear-gradient(
+     to right,transparent 0 11px,#000 11px 21px);
+  opacity:.35;
+}
+.power{
+  position:absolute;right:60px;bottom:54px;width:60px;height:60px;
+  background:#ff8a3a;border-radius:8px;
+  box-shadow:
+    inset 0 0 8px rgba(255,255,255,.2),
+    0 0 18px rgba(255,120,40,.55);
+}
+
+/* ── 3. 베젤(bezel) ───────────────────────────────── */
 .bezel{
-  position:relative;width:100%;height:100%;
-  background:#111;border-radius:18px;
-  box-shadow:inset 0 0 60px #000;
+  width:100%;height:100%;
+  background:radial-gradient(circle at 30% 10%,#122619 0%,#0b1a11 60%,#010602 100%);
+  border-radius:22px;
+  box-shadow:inset 0 0 90px #000;
   overflow:hidden;
 }
 
-/* ── 실제 화면 ───────────────────────────────────────── */
+/* ── 4. CRT 유리(screen) ─────────────────────────── */
 #screen{
   position:absolute;inset:0;display:flex;flex-direction:column;
-  justify-content:center;align-items:center;color:var(--green);
-  text-shadow:0 0 4px var(--green);background:var(--bg);
+  justify-content:center;align-items:center;
+  color:var(--green);text-shadow:0 0 6px var(--green);
+  background:#021208;
 }
-
-/* 스캔라인 + 비네팅 */
+/* 스캔라인+비네팅+Glow */
 #screen::before{content:"";position:absolute;inset:0;
-  background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px);
+  background:repeating-linear-gradient(transparent 0 2px,rgba(0,0,0,.35) 2px 3px),
+             radial-gradient(circle at center,#083c26 0%,transparent 60%);
   mix-blend-mode:overlay;}
 #screen::after{content:"";position:absolute;inset:0;
-  background:radial-gradient(ellipse at center,transparent 0,transparent 65%,rgba(0,0,0,.55) 100%);}
+  background:radial-gradient(ellipse at center,transparent 0,transparent 68%,rgba(0,0,0,.55) 100%);}
 
-/* 노이즈 */
-#noise{position:absolute;inset:-50%;
-  background:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNTAiIGhlaWdodD0iNTAiIHZpZXdCb3g9IjAgMCA1MCA1MCI+PGZpbHRlciBpZD0ibm9pc2UiPjxmZUZydWN0YWxOb2lzZSB0eXBlPSJ0dXJidWxlbmNlIiBiYXNlRnJlcXVlbmN5PSIuOSIvPjwvZmlsdGVyPjxyZWN0IHdpZHRoPSI1MCIgaGVpZ2h0PSI1MCIgZmlsdGVyPSJ1cmwoI25vaXNlKSIgZmlsbD0iI0ZGRiIvPjwvc3ZnPg==");
-  opacity:.05;animation:noise 1s steps(5) infinite;pointer-events:none;}
-@keyframes noise{to{transform:translate(25%,25%);}}
-
-/* ── 입력 영역 ── */
-h2{font-size:1.6vmin;margin-bottom:3vmin;letter-spacing:2px;}
-#typed{width:330px;padding:4px 0;border-bottom:1px solid var(--green);
-  font-size:1.9vmin;min-height:36px;text-align:center;letter-spacing:2px;}
-#msg{margin-top:28px;font-size:1.8vmin;min-height:26px;color:#f44;}
+/* ── 5. 인터랙션 영역 ────────────────────────────── */
+h2{font-size:1.6vmin;margin-bottom:40px;letter-spacing:2px;}
+#typed{
+  width:380px;max-width:70%;padding:5px 0;
+  border-bottom:1.2px solid var(--green);
+  font-size:1.9vmin;min-height:36px;text-align:center;letter-spacing:2px;
+}
+#msg{margin-top:38px;font-size:1.8vmin;min-height:28px;color:#f44;}
 @keyframes glitch{0%,100%{transform:none;}50%{transform:translate(1px,-1px);}}
 
-/* ── 하단 통풍구 & 전원 버튼 ─────────────────────────── */
-.vent{
-  position:absolute;bottom:46px;left:50%;transform:translateX(-50%);
-  width:320px;height:32px;
-  background:repeating-linear-gradient(
-     to right,transparent 0 12px,#000 12px 20px);
-  opacity:.35;border-radius:3px;
-}
-.power-btn{
-  position:absolute;right:48px;bottom:40px;width:46px;height:46px;
-  background:#ff8840;border-radius:6px;
-  box-shadow:
-     inset 0 0 6px rgba(255,255,255,.3),
-     0 0 12px rgba(255,120,30,.6);
-}
-
-/* 커서 숨김 */
+/* cursor 숨김 */
 input{caret-color:transparent;}
 </style>
 </head>
 <body>
 
 <div class="shell">
-  <div id="cabinet" class="shell">    <!-- 필요 없는 중복 class 방지 위해 shell 대신 bezel 변환 -->
-    <div class="bezel">
-      <div id="screen" tabindex="0">
-        <h2>ENTER THE PASSWORD</h2>
-        <div id="typed"></div>
-        <input id="hidden" autocomplete="off" style="position:absolute;left:-9999px">
-        <div id="msg"></div>
-        <div id="noise"></div>
-      </div>
+  <div class="vent"></div>
+  <div class="power"></div>
+
+  <div class="bezel">
+    <div id="screen">
+      <h2>ENTER THE PASSWORD</h2>
+      <div id="typed"></div>
+      <input id="hide" autocomplete="off" style="position:absolute;left:-9999px">
+      <div id="msg"></div>
     </div>
-    <!-- 하우징 장식 -->
-    <div class="vent"></div>
-    <div class="power-btn"></div>
   </div>
 </div>
 
 <script>
-/* ========== 설정 ========== */
+/* 기본 값 */
 const PASS="LETMEIN";
-let buffer="",ambience=false;
+let buf="",amb=false;
 let ctx;const AC=()=>ctx||(ctx=new(window.AudioContext||window.webkitAudioContext));
 
 function tone(f,type){
   const ac=AC(),o=ac.createOscillator(),g=ac.createGain();
-  o.type=type;o.frequency.value=f;g.gain.value=.12;
-  o.connect(g).connect(ac.destination);o.start();
-  g.gain.exponentialRampToValueAtTime(.0001,ac.currentTime+.35);
-  o.stop(ac.currentTime+.36);
+  o.type=type;o.frequency.value=f;g.gain.value=.12;o.connect(g).connect(ac.destination);
+  o.start();g.gain.exponentialRampToValueAtTime(.0001,ac.currentTime+.35);o.stop(ac.currentTime+.36);
 }
-function startAmb(){
-  if(ambience)return; ambience=true;
-  const ac=AC(),hum=ac.createOscillator(),hg=ac.createGain();
-  hum.type="sine";hum.frequency.value=50;hg.gain.value=.025;
-  hum.connect(hg).connect(ac.destination);hum.start();
+function ambience(){
+  if(amb)return;amb=true;
+  const ac=AC(),hum=ac.createOscillator(),g=ac.createGain();
+  hum.type="sine";hum.frequency.value=50;g.gain.value=.025;hum.connect(g).connect(ac.destination);hum.start();
 }
-
 const typed=document.getElementById("typed"),msg=document.getElementById("msg");
 window.addEventListener("keydown",e=>{
-  startAmb(); const k=e.key;
-  if(k==="Backspace"){e.preventDefault();buffer=buffer.slice(0,-1);typed.textContent=buffer;return;}
-  if(k==="Enter"){e.preventDefault();check();return;}
-  if(k.length===1 && buffer.length<PASS.length){buffer+=k.toUpperCase();typed.textContent=buffer;}
+  ambience();
+  if(e.key==="Backspace"){e.preventDefault();buf=buf.slice(0,-1);typed.textContent=buf;return;}
+  if(e.key==="Enter"){e.preventDefault();check();return;}
+  if(e.key.length===1&&buf.length<PASS.length){buf+=e.key.toUpperCase();typed.textContent=buf;}
 });
-
 function check(){
-  if(buffer===PASS){
+  if(buf===PASS){
     msg.style.color="var(--green)";msg.textContent="ACCESS GRANTED";tone(440,"triangle");
     setTimeout(()=>location.href="system-01-Acess.html",1400);
   }else{
     msg.style.color="#f44";msg.textContent="ACCESS DENIED";tone(120,"sawtooth");
-    const s=document.getElementById("screen");s.style.animation="glitch .35s 2";
-    setTimeout(()=>s.style.animation="none",700);
-    buffer="";typed.textContent="";
+    const sc=document.getElementById("screen");sc.style.animation="glitch .35s 2";
+    setTimeout(()=>sc.style.animation="none",700);buf="";typed.textContent="";
   }
 }
 </script>
